--- a/Diagnosis.Client.App/Screens/Sync.xaml
+++ b/Diagnosis.Client.App/Screens/Sync.xaml
@@ -7,7 +7,7 @@
              xmlns:diag="http://schemas.smg.com/diagnosis"
              xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
              mc:Ignorable="d"
-             x:Name="doctors"
+             x:Name="syncClient"
              diag:FocusBehavior.FocusFirst="True"
              Padding="{StaticResource SreenPadding}"
              Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
@@ -33,10 +33,10 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Label Content="Источник"
-                   VerticalAlignment="Top" />
+            <Label Content="Источник" />
             <TextBox x:Name="connectionString"
                      IsReadOnly="True"
+                     IsTabStop="False"
                      Text="{Binding RemoteConnectionString,
                                     UpdateSourceTrigger=PropertyChanged,
                                     ValidatesOnDataErrors=True}"
