--- a/Diagnosis.Client.App/Screens/Words.xaml
+++ b/Diagnosis.Client.App/Screens/Words.xaml
@@ -7,8 +7,8 @@
              xmlns:search="clr-namespace:Diagnosis.Client.App.Controls.Search"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
-             Padding="{StaticResource SreenPadding}"
              Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+             diag:HelpProvider.Topic="words"
              d:DataContext="{d:DesignInstance diag:WordsListViewModel}"
              d:DesignHeight="300"
              d:DesignWidth="300">
@@ -22,116 +22,121 @@
         <KeyBinding Key="F2"
                     Command="{Binding SelectedWord.EditCommand}" />
     </UserControl.InputBindings>
+    <DockPanel>
+        <Button Style="{StaticResource HelpButton}"
+                diag:HelpProvider.Topic="words"
+                DockPanel.Dock="Right" />
+        <Grid MaxWidth="{StaticResource DataGridSreenMaxWidth}"
+              Margin="{StaticResource SreenPadding}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <ToolBar>
-            <Button Command="{Binding AddCommand}"
-                    ToolTip="Добавить ключевое слово (Ctrl+Enter)">
-                <DockPanel>
-                    <diag:AutoGreyableImage Source="{StaticResource addImage}" />
-                    <TextBlock Text="Добавить" />
-                </DockPanel>
-            </Button>
-            <Button Command="{Binding SendToSearchCommand}">
-                <DockPanel>
-                    <diag:AutoGreyableImage Source="{StaticResource findImage}" />
-                    <TextBlock>
+            <ToolBar>
+                <Button Command="{Binding AddCommand}"
+                        ToolTip="Добавить ключевое слово (Ctrl+Enter)">
+                    <DockPanel>
+                        <diag:AutoGreyableImage Source="{StaticResource addImage}" />
+                        <TextBlock Text="Добавить" />
+                    </DockPanel>
+                </Button>
+                <Button Command="{Binding SendToSearchCommand}">
+                    <DockPanel>
+                        <diag:AutoGreyableImage Source="{StaticResource findImage}" />
+                        <TextBlock>
                         <Run IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=Button}}"
                              ToolTip="Искать выбранные ключевые слова (Ctrl+F)">Искать</Run>
-                    </TextBlock>
-                </DockPanel>
-            </Button>
-        </ToolBar>
+                        </TextBlock>
+                    </DockPanel>
+                </Button>
+            </ToolBar>
 
-        <diag:Filter x:Name="filter"
-                     DataContext="{Binding Filter}"
-                     WatermarkText="Фильтр"
-                     Grid.Row="1" />
-
-        <!-- Set VirtualizationMode for IsSelected binding -->
-        <DataGrid x:Name="dataGrid"
-                  Grid.Row="2"
-                  ItemsSource="{Binding Words}"
-                  SelectedItem="{Binding SelectedWord}"
-                  diag:MultiSelectorBehaviours.SynchronizedSelectedItems="{Binding SelectedWords}"
-                  Visibility="{Binding NoWords, Converter={StaticResource NegBooleanToVisibilityConverter}}"
-                  Margin="0,10,0,0"
-                  Style="{DynamicResource MyDataGridStyle}"
-                  SelectedCellsChanged="dataGrid_SelectedCellsChanged">
-            <DataGrid.Resources>
-                <Style x:Key="Checkbox"
-                       TargetType="{x:Type CheckBox}"
-                       BasedOn="{StaticResource {x:Type CheckBox}}">
-                    <Setter Property="Focusable"
-                            Value="False" />
-                </Style>
-            </DataGrid.Resources>
-            <DataGrid.Columns>
-                <DataGridCheckBoxColumn Header=""
+            <diag:Filter x:Name="filter"
+                         DataContext="{Binding Filter}"
+                         WatermarkText="Фильтр"
+                         Grid.Row="1" />
+            
+            <!-- Set VirtualizationMode for IsSelected binding -->
+            <DataGrid x:Name="dataGrid"
+                      Grid.Row="2"
+                      ItemsSource="{Binding Words}"
+                      SelectedItem="{Binding SelectedWord}"
+                      diag:MultiSelectorBehaviours.SynchronizedSelectedItems="{Binding SelectedWords}"
+                      Visibility="{Binding NoWords, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                      Margin="0,10,0,0"
+                      Style="{DynamicResource MyDataGridStyle}"
+                      SelectedCellsChanged="dataGrid_SelectedCellsChanged">
+                <DataGrid.Resources>
+                    <Style x:Key="Checkbox"
+                           TargetType="{x:Type CheckBox}"
+                           BasedOn="{StaticResource {x:Type CheckBox}}">
+                        <Setter Property="Focusable"
+                                Value="False" />
+                    </Style>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <DataGridCheckBoxColumn Header=""
+                                            IsReadOnly="True"
+                                            ElementStyle="{StaticResource Checkbox}"
+                                            Binding="{Binding IsChecked, Mode=OneWay}" />
+                    <DataGridTextColumn Header="Текст"
                                         IsReadOnly="True"
-                                        ElementStyle="{StaticResource Checkbox}"
-                                        Binding="{Binding IsChecked, Mode=OneWay}" />
-                <DataGridTextColumn Header="Текст"
-                                    IsReadOnly="True"
-                                    Binding="{Binding Title, Mode=OneWay}" />
-                <DataGridTextColumn Header="Использовано"
-                                    IsReadOnly="True"
-                                    ElementStyle="{StaticResource RightCellTextBlock}"
-                                    Binding="{Binding Usage, Mode=OneWay}" />
-            </DataGrid.Columns>
-            <DataGrid.InputBindings>
-                <KeyBinding Key="Enter"
-                            Command="{Binding EditCommand}" />
-                <KeyBinding Key="Delete"
-                            Command="{Binding DeleteCommand}" />
-                <KeyBinding Gesture="Control+Enter"
-                            Command="{Binding AddCommand}" />
-            </DataGrid.InputBindings>
-            <DataGrid.RowStyle>
-                <Style TargetType="DataGridRow">
-                    <Setter Property="IsSelected"
-                            Value="{Binding IsSelected, Mode=TwoWay}" />
-                    <Setter Property="diag:RowDblClick.DoubleClickCommand"
-                            Value="{Binding ElementName=dataGrid, Path=DataContext.EditCommand}" />
-                    <Setter Property="Tag"
-                            Value="{Binding DataContext, ElementName=dataGrid}" />
-                    <Setter Property="ContextMenu">
-                        <Setter.Value>
-                            <ContextMenu>
-                                <!--WordsViewModel-->
-                                <MenuItem Header="Изменить..."
-                                          FontWeight="Bold"
-                                          InputGestureText="F2"
-                                          Command="{Binding EditCommand}" />
-                                <!--WordsListViewModel-->
-                                <MenuItem Header="Искать"
-                                          Style="{StaticResource searchMenuItem}"
-                                          Command="{Binding PlacementTarget.Tag.SendToSearchCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
-                                <MenuItem Header="Удалить"
-                                          Style="{StaticResource deleteMenuItem}"
-                                          Command="{Binding PlacementTarget.Tag.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
-                                <Separator />
-                                <MenuItem Header="Добавить..."
-                                          InputGestureText="Ctrl+Enter"
-                                          Command="{Binding PlacementTarget.Tag.AddCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
-                            </ContextMenu>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </DataGrid.RowStyle>
-            <DataGrid.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Добавить..."
-                              InputGestureText="Ctrl+Enter"
-                              Command="{Binding AddCommand}" />
-                </ContextMenu>
-            </DataGrid.ContextMenu>
-        </DataGrid>
-    </Grid>
+                                        Binding="{Binding Title, Mode=OneWay}" />
+                    <DataGridTextColumn Header="Использовано"
+                                        IsReadOnly="True"
+                                        ElementStyle="{StaticResource RightCellTextBlock}"
+                                        Binding="{Binding Usage, Mode=OneWay}" />
+                </DataGrid.Columns>
+                <DataGrid.InputBindings>
+                    <KeyBinding Key="Enter"
+                                Command="{Binding EditCommand}" />
+                    <KeyBinding Key="Delete"
+                                Command="{Binding DeleteCommand}" />
+                    <KeyBinding Gesture="Control+Enter"
+                                Command="{Binding AddCommand}" />
+                </DataGrid.InputBindings>
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="IsSelected"
+                                Value="{Binding IsSelected, Mode=TwoWay}" />
+                        <Setter Property="diag:RowDblClick.DoubleClickCommand"
+                                Value="{Binding ElementName=dataGrid, Path=DataContext.EditCommand}" />
+                        <Setter Property="Tag"
+                                Value="{Binding DataContext, ElementName=dataGrid}" />
+                        <Setter Property="ContextMenu">
+                            <Setter.Value>
+                                <ContextMenu>
+                                    <!--WordsViewModel-->
+                                    <MenuItem Header="Изменить..."
+                                              FontWeight="Bold"
+                                              InputGestureText="F2"
+                                              Command="{Binding EditCommand}" />
+                                    <!--WordsListViewModel-->
+                                    <MenuItem Header="Искать"
+                                              Style="{StaticResource searchMenuItem}"
+                                              Command="{Binding PlacementTarget.Tag.SendToSearchCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                                    <MenuItem Header="Удалить"
+                                              Style="{StaticResource deleteMenuItem}"
+                                              Command="{Binding PlacementTarget.Tag.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                                    <Separator />
+                                    <MenuItem Header="Добавить..."
+                                              InputGestureText="Ctrl+Enter"
+                                              Command="{Binding PlacementTarget.Tag.AddCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                                </ContextMenu>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DataGrid.RowStyle>
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Добавить..."
+                                  InputGestureText="Ctrl+Enter"
+                                  Command="{Binding AddCommand}" />
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
+            </DataGrid>
+        </Grid>
+    </DockPanel>
 </UserControl>
