--- a/Diagnosis.Server.App/Windows/UomEditorWindow.xaml
+++ b/Diagnosis.Server.App/Windows/UomEditorWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="{Binding Title}"
         Width="300"
-        Height="250"
+        SizeToContent="Height"
         ShowInTaskbar="True"
         ResizeMode="NoResize"
         UseLayoutRounding="True"
@@ -63,9 +63,10 @@
             <DockPanel>
                 <Label />
                 <CheckBox x:Name="isBase"
-                          ToolTip="Через базовую единицу выражаются другие единицы типа."
-                          Content="_Базовая единица типа"
-                          IsChecked="{Binding IsBase}" />
+                          ToolTip="Через базовую единицу выражаются другие единицы типа."                          
+                          IsChecked="{Binding IsBase}">
+                    <AccessText Text="_Базовая единица типа" />
+                </CheckBox>
             </DockPanel>
             <DockPanel ToolTip="Сколько базовых единиц типа составляют эту единицу.">
                 <Label HorizontalContentAlignment="Right"
