--- a/Diagnosis.Client.App/Screens/Sync.xaml
+++ b/Diagnosis.Client.App/Screens/Sync.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:search="clr-namespace:Diagnosis.Client.App.Controls.Search"
              xmlns:diag="http://schemas.smg.com/diagnosis"
+             xmlns:mahControls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
              mc:Ignorable="d"
              x:Name="syncClient"
@@ -38,8 +39,7 @@
 
                 <Label Content="Клиент" />
                 <TextBox x:Name="localConnectionString"
-                         IsReadOnly="True"
-                         IsTabStop="False"
+                         Style="{StaticResource conStrTextBox}"
                          Text="{Binding LocalConnectionString}"
                          Grid.Column="1" />
 
@@ -70,8 +70,7 @@
 
                 <Label Content="Источник" />
                 <TextBox x:Name="connectionString"
-                         IsReadOnly="True"
-                         IsTabStop="False"
+                         Style="{StaticResource conStrTextBox}"
                          Text="{Binding RemoteConnectionString,
                                     UpdateSourceTrigger=PropertyChanged,
                                     ValidatesOnDataErrors=True}"
