--- a/Diagnosis.Client.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.Client.App/Controls/Search/Tag.xaml
@@ -18,48 +18,46 @@
         <DockPanel.Style>
             <Style TargetType="DockPanel" />
         </DockPanel.Style>
+        <Thumb x:Name="drag"
+               DockPanel.Dock="Left"
+               Foreground="Gray"
+               Width="15">
+            <Thumb.Style>
+                <Style TargetType="{x:Type Thumb}">
+                    <Setter Property="Template"
+                            Value="{StaticResource DragCircleThumbTemplate}" />
 
-        <StackPanel x:Name="drag"
-                    Orientation="Horizontal"
-                    DockPanel.Dock="Left"
-                    Width="15"
-                    Height="20"
-                    Cursor="SizeAll"
-                    Background="Transparent">
-            <StackPanel.Style>
-                <Style TargetType="StackPanel">
                     <Setter Property="Visibility"
                             Value="Hidden" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsDraggable}"
-                                     Value="True">
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource AndBoolean}">
+                                    <Binding Path="IsMouseOver"
+                                                 RelativeSource="{RelativeSource AncestorType=ListBoxItem}" />
+                                    <Binding Path="IsDraggable" />
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+
                             <Setter Property="Visibility"
                                     Value="Visible" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource AncestorType=ListBoxItem}}"
-                                     Value="True">
+                        <!--or-->
+                        <!--<DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource AndBoolean}">
+                                    <Binding Path="IsSelected" />
+                                    <Binding Path="IsDraggable" />
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+
                             <Setter Property="Visibility"
                                     Value="Visible" />
-                        </DataTrigger>
+                        </DataTrigger>-->
                     </Style.Triggers>
                 </Style>
-            </StackPanel.Style>
-            <StackPanel.Resources>
-                <Path x:Key="line"
-                      x:Shared="False"
-                      Data="M0,0 L0,1"
-                      Stretch="Fill"
-                      Stroke="Gray"
-                      StrokeDashOffset="2"
-                      StrokeThickness="2"
-                      StrokeDashArray="0,2.5"
-                      StrokeDashCap="Round" />
-            </StackPanel.Resources>
-
-            <ContentPresenter Content="{StaticResource line}" />
-            <ContentPresenter Content="{StaticResource line}"
-                              Margin="2,0,0,0" />
-        </StackPanel>
+            </Thumb.Style>
+        </Thumb>
 
         <TextBox x:Name="query"
                  diag:FocusExtension.IsFocused="{Binding IsTextBoxFocused, Mode=TwoWay}"
