--- a/Diagnosis.Client.App/Templates/Controls.xaml
+++ b/Diagnosis.Client.App/Templates/Controls.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:diag="http://schemas.smg.com/diagnosis"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <DataTemplate x:Key="EnumComboTemplate">
         <TextBlock Text="{Binding Mode=OneWay, Converter={StaticResource EnumToLabel}}"
@@ -7,4 +8,82 @@
                    VerticalAlignment="Center" />
 
     </DataTemplate>
+
+    <DrawingBrush x:Key="squareDotsBrush" TileMode="Tile"
+                  Viewbox="0,0,4,4"
+                  Viewport="0,0,4,4"
+                  ViewportUnits="Absolute"
+                  ViewboxUnits="Absolute">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <!--<GeometryDrawing Brush="White"
+                                     Geometry="M1,1L1,3 3,3 3,1z" />-->
+                <GeometryDrawing Brush="#FF6D6D6D"
+                                 Geometry="M0,0L0,2 2,2 2,0z" />
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+
+    <DrawingBrush x:Key="vsLikeDotsBrush"
+                  ViewportUnits="Absolute"
+                  ViewboxUnits="Absolute"
+                  Viewport="0,0,5,4"
+                  Viewbox="0,0,5,4"
+                  TileMode="Tile">
+        <DrawingBrush.Drawing>
+            <GeometryDrawing Brush="#FF6D6D6D">
+                <GeometryDrawing.Geometry>
+                    <GeometryGroup>
+                        <GeometryGroup.Children>
+                            <RectangleGeometry Rect="0,0,1,1" />
+                            <RectangleGeometry Rect="4,0,1,1" />
+                            <RectangleGeometry Rect="2,2,1,1" />
+                        </GeometryGroup.Children>
+                    </GeometryGroup>
+                </GeometryDrawing.Geometry>
+            </GeometryDrawing>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+
+    <ControlTemplate x:Key="DragThumbTemplate"
+                     TargetType="{x:Type Thumb}">
+        <Border Cursor="SizeAll"
+                SnapsToDevicePixels="True"
+                Background="Transparent">
+            <!--<Rectangle Height="{TemplateBinding Height}"
+                       Margin="0 2"
+                       Width="7"
+                       Fill="{StaticResource squareDotsBrush}">
+            </Rectangle>-->
+            <diag:DragMarker Margin="0 2"
+                             Width="8" />
+        </Border>
+    </ControlTemplate>
+    
+    <ControlTemplate x:Key="DragCircleThumbTemplate"
+                     TargetType="{x:Type Thumb}">
+        <Border Cursor="SizeAll"
+                SnapsToDevicePixels="True"
+                Background="Transparent">
+            <!--<Rectangle Height="{TemplateBinding Height}"
+                       Margin="0 2"
+                       Width="7"
+                       Fill="{StaticResource squareDotsBrush}">
+            </Rectangle>-->
+            <diag:DragMarker IsCircle="True"
+                             Margin="0 2"
+                             Width="8" />
+        </Border>
+    </ControlTemplate>
+    
+    <ControlTemplate x:Key="ToolbarThumbTemplate"
+                     TargetType="{x:Type Thumb}">
+        <Border Cursor="SizeAll"
+                SnapsToDevicePixels="True"
+                Background="Transparent"
+                Height="17"
+                    Width="5">
+                <Rectangle Fill="{StaticResource vsLikeDotsBrush}" />
+        </Border>
+    </ControlTemplate>
 </ResourceDictionary>
